--- a/.env.example
+++ b/.env.example
@@ -63,3 +63,7 @@ AWS_BUCKET=
 AWS_USE_PATH_STYLE_ENDPOINT=false
 
 VITE_APP_NAME="${APP_NAME}"
+
+SANCTUM_EXPIRATION=60
+SANCTUM_TOKEN_LENGTH=250
+SANCTUM_TOKEN_PREFIX=
