setup najm, and yakeen integration, and make mock data for testing

--- a/.env.example
+++ b/.env.example
@@ -67,3 +67,9 @@ VITE_APP_NAME="${APP_NAME}"
 SANCTUM_EXPIRATION=60
 SANCTUM_TOKEN_LENGTH=250
 SANCTUM_TOKEN_PREFIX=
+
+# Najm API
+NAJM_API_BASE_URL=https://api.najm.sa
+NAJM_API_TOKEN=your_token_here
+NAJM_API_KEY=abc123xyz789
+NAJM_CLIENT_ID=broker_platform_001
