enhance the files structure
setup Yakeen Integrations

--- a/.env.example
+++ b/.env.example
@@ -73,3 +73,10 @@ NAJM_API_BASE_URL=https://api.najm.sa
 NAJM_API_TOKEN=your_token_here
 NAJM_API_KEY=abc123xyz789
 NAJM_CLIENT_ID=broker_platform_001
+
+
+# Yakeen API
+YAKEEN_API_BASE_URL=https://api.yakeen.sa
+YAKEEN_API_TOKEN=your_yakeen_token_here
+YAKEEN_API_KEY=xyz789abc123
+YAKEEN_CLIENT_ID=broker_platform_001
